--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemailer": "^6.4.16"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
